--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-name: Your New Jekyll Site
+name: SoYoung
 markdown: redcarpet
 pygments: true
+mail: shaolianbo1015@foxmail.com
+git: github.com/shaolianbo
