--- a/_config.yml
+++ b/_config.yml
@@ -128,4 +128,8 @@ JB :
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
   
-  gem: [Jekyll-MyFilter]
+gem: [Jekyll-MyFilter]
+
+domain: "shaolianbo.github.io"
+
+  
