添加头像和两篇博客

--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ pygments: true
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title :  No.7
+title :  Home
 tagline: Site Tagline
 author :
   name : Jay shaolianbo
-  email : shaolianbo1015@foxmail.com
+  email : lianbo8@gmail.com
   github : shaolianbo
   twitter : shaolianbo
   feedburner : shaolianbo
