--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title :  Home
+title :  连波的博客
 tagline: Site Tagline
 author :
   name : Jay shaolianbo
